--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,15 @@
-<h2>Smart Punchlist</h2>
+<mat-toolbar>
+  <mat-toolbar-row>
+    <h2>Smart Punchlist</h2>
+  </mat-toolbar-row>
+</mat-toolbar>
+
+<section class="support-section">
+  <mat-card class="support-card">
+    <mat-card-content>
+      <p>
+        For support contact us at <a href="">lexy.feito@gmail.com</a>
+      </p>
+    </mat-card-content>
+  </mat-card>
+</section>
